Fixed main page elements stretching on large screens

--- a/pages/_global.scss
+++ b/pages/_global.scss
@@ -14,6 +14,7 @@
 html
 {
 	cursor: auto;
+	margin: 0 auto;
 	min-width: 360px;
 	scroll-behavior: smooth;
 }
